# multipel-camera-tracking-custom-project

./: DIAGRAMS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/: __init__.py
apps/heuristic_app/: __init__.py  main.py
apps/realtime_app/: __init__.py  main.py
apps/rest_app/: __init__.py  main.py
configs/: base.yaml
configs/heuristic/: base.yaml
docs/: ARCHITECTURE.md  CHECKPOINT_PACKAGES.md  FRAME_GRAPH_BASELINE.md  GNN_GRAPH_TENSOR_PROBE.md  GNN_SCAFFOLD.md  HEURISTIC_BASELINE.md  NEURAL_EDGE_INFERENCE.md  REALTIME_BASELINE.md  REALTIME_TRACKLET_BASELINE.md  TRAINER_BACKEND_INTEGRATION.md
mcmt_core/: __init__.py
scripts/: bootstrap_gpu.py  entrypoint.py
tests_notebooks/: 00_environment_and_gpu_check.ipynb  01_dataset_adapter_experiments.ipynb  02_ultralytics_detection_experiments.ipynb  03_ultralytics_segmentation_experiments.ipynb  04_reid_models_experiments.ipynb  05_attributes_models_experiments.ipynb  06_node_feature_builder_experiments.ipynb  07_edge_feature_builder_experiments.ipynb  08_graph_construction_and_visualization.ipynb  09_spatial_graph_single_epoch_experiment.ipynb  10_temporal_graph_single_epoch_experiment.ipynb  11_frame_by_frame_graph_tracking_experiment.ipynb  12_tracklet_graph_tracking_experiment.ipynb  13_frame_by_frame_non_graph_tracking_experiment.ipynb  14_tracklet_non_graph_tracking_experiment.ipynb  15_realtime_frame_mode_experiment.ipynb  16_realtime_tracklet_mode_experiment.ipynb  17_output_sinks_experiment.ipynb  18_mot_export_and_evaluation_experiment.ipynb  README.md
trainers/: __init__.py
(+93 files in other folders)
